--- a/order/index.html
+++ b/order/index.html
@@ -16,11 +16,11 @@
     
 		<link href="../_app/immutable/assets/0.ca5f2804.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.8c5144a1.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.ed331bec.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.3856bc18.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9f5d38e9.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.07c6f43a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.f5397308.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.142113d1.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6bba4460.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.c5c3065e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.b040798a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.a113fb1e.js">
@@ -120,11 +120,11 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите клиента..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите клиента..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="ООО Транзит"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/company/avatar_company.svg" alt="ООО Транзит"></div>
                     ООО Транзит</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="ИП Иванов"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/company/avatar_company.svg" alt="ИП Иванов"></div>
                     ИП Иванов</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/company/avatar_company.svg" alt="Самозанятый Ласточкин"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/company/avatar_company.svg" alt="Самозанятый Ласточкин"></div>
                     Самозанятый Ласточкин</a>
             </li></ul>
 </div></div>
@@ -146,9 +146,9 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите менеджера..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите менеджера..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/managers/manager.png" alt="Николай Поздняков"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/user/managers/manager.png" alt="Николай Поздняков"></div>
                     Николай Поздняков</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Дмитрий Рудин"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/user/avatar.svg" alt="Дмитрий Рудин"></div>
                     Дмитрий Рудин</a>
             </li></ul>
 </div></div>
@@ -170,9 +170,9 @@
 <button id="dropdownDefaultButton" class="relative bg-[white] border border-[transparent] rounded-lg  text-sm z-0 ring-1 ring-gray-300 focus:shadow-outline focus:ring-blue-600 focus:border-blue-600 w-full mt-[1px] px-[12px] py-[7px] dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 text-gray" type="button" title="Выберите сотрудника..." ><div class="relative z-1 bg-[transparent] inline-flex justify-between items-center">
         <input class="z-[-1] w-full bg-white " value="Выберите сотрудника..." disabled>
         <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path></svg></div></button>
-<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Эдуард Рябов"></div>
+<div id="dropdown" hidden class="w-auto absolute z-10 bg-[white] divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"><ul class="text-sm py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  text-white bg-primary-500 "><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/user/avatar.svg" alt="Эдуард Рябов"></div>
                     Эдуард Рябов</a>
-            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/imgs/user/avatar.svg" alt="Василий Петров"></div>
+            </li><li><a href="#" class="flex items-center px-4 py-2 dark:hover:bg-gray-600 dark:hover:text-white  hover:bg-gray-200"><div  class="divide-x-2 pr-2 mr-2 border-r"><img class="h-auto max-w-full w-9 h-9  rounded-full bg-gray-100 text-green-500" src="/orders-klimov-red-public/imgs/user/avatar.svg" alt="Василий Петров"></div>
                     Василий Петров</a>
             </li></ul>
 </div></div>
@@ -721,7 +721,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainer0v7vEq5URjODxQDEo4BoL" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainerm1EisS246yeHP0HUDI0s5" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">2</th>
                         <td class="px-2 py-4">
@@ -880,7 +880,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerzziPV_-s_zsQtdKQh9hnt" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainer1hwJabABr6uMTWrK6H_Qk" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">3</th>
                         <td class="px-2 py-4">
@@ -1039,7 +1039,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerV594EDmKPVniTbg0KwF9I" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainervl60Ptcnz0vIy1dVtw0rz" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr></tbody></table>
 
@@ -1073,7 +1073,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ykxoft = {
+					__sveltekit_1rw5ze8 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -1083,23 +1083,9 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.8c5144a1.js"),
-						import("../_app/immutable/entry/app.142113d1.js")
+						import("../_app/immutable/entry/start.ed331bec.js"),
+						import("../_app/immutable/entry/app.6bba4460.js")
 					]).then(([kit, app]) => {
-						kit.start(app, element, {
-							node_ids: [0, 3],
-							data,
-							form: null,
-							error: null
-						});
-					});
-				}
-			</script>
-		</div>
-</body>
-
-</html>
- {
 						kit.start(app, element, {
 							node_ids: [0, 3],
 							data,
